--- a/styles/stylesilksong.css
+++ b/styles/stylesilksong.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
 body {
   background: linear-gradient(90deg, #000, #434343);
   color: white;
@@ -45,37 +44,39 @@ body {
 #nomeloja{
     padding: 16px;
 }
-.text{
+.game-img{ /* aqui mexemos no container do jogo */
     display: flex;
-    align-items: center;
-    justify-content: center;
     height: 200px;
-    font-family: "Pixelify Sans";
+    width: 200px;
+    margin-left: 50px;
+    margin-top: 30px;
 }
-.emojis{
+.game-img img{ /*aqui na imagem do jogo */
+    border-radius: 20px;
+}
+.stores{
     display: flex;
-    width: 1300px;
-    height: 300px;
+    flex-direction: column;
+    margin-left: -530px;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
-#mala{
-    position: relative;
-    left: 0px;
-}
-#surprise{
-    position: relative;
-    left: 400px;  /*distancia da esquerda da posição normal do elemento */
-}
-#botaoentrar {
-    display: inline-block;
-    width: 80px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    border-radius: 8px;
-    background: linear-gradient(90deg, #000, #737373);
-    color: white;
+.stores a{
     text-decoration: none;
-    cursor: pointer;
-    font-family: sans-serif;
 }
-
+.playstation img{
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+    border-radius: 20px;
+}
+#preco-ps{
+    position: relative;
+    top: -13px;
+}
+.steam img{
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+    border-radius: 20px;
+}
