--- a/styles/stylesilksong.css
+++ b/styles/stylesilksong.css
@@ -16,7 +16,7 @@ body {
     margin: 10px;
     padding: 0 16px;
     transition: 0.2s; /*transição pra quando sair do hover */
-    opacity: 0.8; 
+    opacity: 0.6;
 }
 .navbar ul{
     list-style-type: none;
@@ -46,8 +46,8 @@ body {
 }
 .game-img{ /* aqui mexemos no container do jogo */
     display: flex;
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
     margin-left: 50px;
     margin-top: 30px;
 }
@@ -56,8 +56,9 @@ body {
 }
 .stores{
     display: flex;
+    position: relative;
     flex-direction: column;
-    margin-left: -530px;
+    right: 655px;
     margin-top: 20px;
     margin-bottom: 50px;
 }
@@ -79,4 +80,22 @@ body {
     width: 40px;
     margin-right: 10px;
     border-radius: 20px;
+}
+#preco-steam{
+    position: relative;
+    top: -13px;
+}
+.banner-game{
+    display: flex;
+    position: relative;
+    width: 700px;
+    height: 400px;
+    left: 800px;
+    bottom: 450px;
+}
+.banner-game img{
+    border-radius: 24px;
+    height: 400px;
+    width: 700px;
+    
 }
