--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
 body {
-  background: linear-gradient(90deg, #000, #434343);
+  background: #101014;
   color: white;
   font-family: "Pixelify Sans",Arial, sans-serif;
   text-align: center;
