--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* rem = numero de pixels / 16 ( base padrao)  seu uso aumenta a responsabilidade*/
+/* Trocar tudo que é margem, altura, border-radius e espaçamentos externos para rem.
+
+Trocar paddings internos que são relativos à fonte do elemento para em (como o padding dos links).
+
+Bordas podem ficar em px, que é comum. */
 body {
   background: #101014;
   color: white;
-  font-family: "Pixelify Sans",Arial, sans-serif;
   text-align: center;
   padding: 0;
   margin: 0;
@@ -10,27 +16,30 @@ body {
 .navbar{
     display: flex;
     background-color: rgb(0, 0, 0);
-    height: 50px;
+    height: 3.125rem;
     justify-content: space-between;
-    border-radius: 12px;
+    border-radius: 0.75rem;
     border: 2px solid rgb(255, 255, 255) ;
-    margin: 10px;
-    padding: 0 16px;
+    margin: 0.625rem;
+    padding: 0 1em;
     transition: 0.2s; /*transição pra quando sair do hover */
     opacity: 0.8; 
+    font-family: "Pixelify Sans",Arial, sans-serif;
 }
 .navbar ul{
     list-style-type: none;
     display: flex;
     margin: 0;
     padding: 0;
+    
 }
+
 .navbar ul a{
     display: block;
     text-decoration: none;
     color: rgb(255, 255, 255);
     text-align: center;
-    padding: 16px 16px;
+    padding: 1em 1em;
     opacity: 1;
 }
 .navbar ul a:hover{
@@ -43,5 +52,5 @@ body {
 
 }
 #nomeloja{
-    padding: 16px;
+    padding: 1em;
 }
