--- a/styles/stylehome.css
+++ b/styles/stylehome.css
@@ -4,14 +4,20 @@
 body{
     overflow: hidden;
 }
-.text{
+main{
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    height: 12.5rem;
-    width: 31.25rem;
-    font-family: "Poppins", sans-serif;
-    margin-left: 31.25rem;
+    align-items: center;
+}
+.text{
+    margin-top: 10rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: "Press Start 2P", 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    gap: 1rem;
+    font-size: 4rem;
 }
 .emojis{
     display: flex;
@@ -26,25 +32,34 @@ body{
     position: relative;
     left: 25rem;  /*distancia da esquerda da posição normal do elemento */
 }
+.botao{
+    font-family:  "Press Start 2P", Arial, sans-serif;
+}
+
 #botaoentrar {
-    display: inline-block;
-    width: 5rem;
-    height: 1.875rem;
+    display: flex;
+    justify-content: center;
     line-height: 1.875; /* equivale a 30px, só que flexível */
     text-align: center;
     border-radius: 0.5rem;
-    background: #0f0f13;
     color: white;
     text-decoration: none;
     cursor: pointer;
-    border: solid 1px;
+    padding: 20px;
     transition: 0.4s;
     font-family: "Pixelify Sans",Arial, sans-serif;
+    font-size: 2rem;
 }
 #botaoentrar:hover{
-    color: black;
-    background-color: #f2f5f7;
-    border: #f2f5f7;
     transition: 0.4s;
     scale: 1.3;
+}
+@media screen and (max-width: 768px) {
+    .text{
+        font-size: 2rem;
+    }
+    #botaoentrar{
+        font-size: 1.5rem;
+    }
+    
 }
