--- a/styles/stylehome.css
+++ b/styles/stylehome.css
@@ -17,7 +17,8 @@ main{
     text-align: center;
     font-family: "Press Start 2P", 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     gap: 1rem;
-    font-size: 4rem;
+    font-size: 3.5rem;
+    animation: inout 4s infinite ease-in-out;
 }
 .emojis{
     display: flex;
@@ -32,9 +33,6 @@ main{
     position: relative;
     left: 25rem;  /*distancia da esquerda da posição normal do elemento */
 }
-.botao{
-    font-family:  "Press Start 2P", Arial, sans-serif;
-}
 
 #botaoentrar {
     display: flex;
@@ -46,14 +44,17 @@ main{
     text-decoration: none;
     cursor: pointer;
     padding: 20px;
-    transition: 0.4s;
+    transition: 0.3s;
     font-family: "Pixelify Sans",Arial, sans-serif;
     font-size: 2rem;
 }
 #botaoentrar:hover{
-    transition: 0.4s;
-    scale: 1.3;
+    animation: piscar 1.1s infinite;
+    transition: 0.3s;
+    scale: 1.2;
 }
+
+/* responsivo */
 @media screen and (max-width: 768px) {
     .text{
         font-size: 2rem;
@@ -62,4 +63,34 @@ main{
         font-size: 1.5rem;
     }
     
+}
+
+/* frames da animação de piscar quando hover */
+@keyframes piscar {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+/* animação do titulo */
+@keyframes inout{
+    0%{scale: 1;
+        transform: rotate(0deg);}
+
+    25%{scale: 1.2;
+    transform: rotate(5deg);
+    }
+
+    50%{
+        scale: 1;
+        transform: rotate(0deg);
+    }
+    75%{
+        scale: 1.2;
+        transform: rotate(-5deg);
+    }
+    100%{
+        scale: 1;
+        transform: rotate(0deg);
+    }
 }
