adicionado pagina sobre os devs

--- a/styles/stylemaps.css
+++ b/styles/stylemaps.css
@@ -61,6 +61,7 @@ body{
 }
 .texto{
     margin-left: 20px;
+    /* ver se a larissa gosta do tex-aligin left: ; */
 }
 .titulo-game{
     font-family: "Cinzel", serif;
