--- a/styles/basic.css
+++ b/styles/basic.css
@@ -4,16 +4,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300..700&display=swap');
-/* rem = numero de pixels / 16 ( base padrao)  seu uso aumenta a responsabilidade*/
-/* Trocar tudo que é margem, altura, border-radius e espaçamentos externos para rem.
 
-Trocar paddings internos que são relativos à fonte do elemento para em (como o padding dos links).
-#0A0F1C cor de fundo original
-Bordas podem ficar em px, que é comum. */
 body {
     background-image: url(https://external-preview.redd.it/iaMnzdRn7xiYtAmeatySxHdLeZW4ZmxtnxfcUGX-oNk.jpg?auto=webp&s=6adc0349cd0d7221c0873a1673d4b05a8b878d68);
     background-repeat: no-repeat;
     background-size: cover;
+  /* background: radial-gradient(
+      circle at center,
+      #0d0f14 0%,
+      #05060a 40%,
+     #010203 100%
+    ); */
     color: white;
     text-align: center;
     padding: 0;
@@ -28,9 +29,7 @@ body {
     border: 2px solid rgb(255, 255, 255) ;
     margin: 0.625rem;
     padding: 0 1em;
-    transition: 0.2s; /*transição pra quando sair do hover */ 
     font-family: "Pixelify Sans",Arial, sans-serif;
-    transition: 0.3s;
 }
 .loja-about{
     display: flex;
@@ -54,15 +53,10 @@ body {
     color: rgb(255, 255, 255);
     text-align: center;
     padding: 1em;
-    opacity: 1;
 }
 .navbar ul a:hover{
     background-color: white;
     color:black;
-}
-.navbar:hover{
-    transition: 0.3s;
-
 }
 #nomeloja{
     padding: 1em;
