--- a/styles/styledev.css
+++ b/styles/styledev.css
@@ -11,19 +11,19 @@ body{
 .text-introduct{
     font-family: "Cinzel", serif;
     color: #E6E6E6;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 20px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 20px;
 }
 .devs{
-    display: flex;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 40px;
-    gap: 100px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
     font-family: "Cinzel", serif;
+    margin-top: 20px;
+    padding: 20px;
 }
 .devs img{
     transition: 0.5s;
