--- a/styles/stylegame.css
+++ b/styles/stylegame.css
@@ -3,7 +3,7 @@
     display: flex;
     font-family: "Cinzel", Arial, Helvetica, sans-serif;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 400;
 }
 .banner-game{
     margin-top: 0.625rem;
