--- a/styles/basic.css
+++ b/styles/basic.css
@@ -15,6 +15,9 @@ body {
     padding: 0;
     margin: 0;
 }
+::selection{
+    background-color: rgb(32, 38, 95);
+}
 .navbar{
     display: flex;
     background-color: rgba(0, 0, 0, 0.7);
