--- a/styles/styledev.css
+++ b/styles/styledev.css
@@ -35,3 +35,10 @@ body{
 .about-dev {
     width: 300px;
 }
+@media  screen and (max-width: 764px) {
+    body{
+        display: flex;
+        flex-wrap: wrap;
+        overflow-x: hidden;
+    }
+}
