--- a/styles/stylehome.css
+++ b/styles/stylehome.css
@@ -10,7 +10,7 @@ main{
     justify-content: center;
     align-items: center;
 }
-.text{
+.titulo{
     margin-top: 10rem;
     justify-content: center;
     align-items: center;
@@ -19,19 +19,6 @@ main{
     gap: 1rem;
     font-size: 3.5rem;
     animation: inout 4s infinite ease-in-out;
-}
-.emojis{
-    display: flex;
-    width: 81.25rem;
-    height: 18.75rem;
-}
-#mala{
-    position: relative;
-    left: 0px;
-}
-#surprise{
-    position: relative;
-    left: 25rem;  /*distancia da esquerda da posição normal do elemento */
 }
 
 #botaoentrar {
@@ -53,7 +40,17 @@ main{
     transition: 0.3s;
     scale: 1.2;
 }
-
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about h3{
+    font-size: 12px;
+    font-family: 'Press Start 2P';
+    font-weight: 100;
+    margin-top: 200px;
+}
 /* responsivo */
 @media screen and (max-width: 768px) {
     .text{
@@ -93,4 +90,8 @@ main{
         scale: 1;
         transform: rotate(0deg);
     }
+}
+#instagram{
+    text-decoration: none;
+    color: white;
 }
