--- a/styles/styledlc.css
+++ b/styles/styledlc.css
@@ -13,8 +13,8 @@ body{
     font-family: "Cinzel", serif;
     color: #E6E6E6;
     letter-spacing: 2px;
-    text-shadow: 0 0 8px #7BAFD4; /* isso ai é pra botar sombrinha no text  */
-    white-space: nowrap; /* impede quebra */
+    text-shadow: 0 0 8px #7BAFD4; 
+    white-space: nowrap; 
 }
 .titulo h1{
     font-weight: 400;
@@ -158,7 +158,7 @@ body{
 /* interativo */
 .dlc-card1:hover, .dlc-card2:hover, .dlc-card3:hover, .dlc-card4:hover {
     transform: scale(1.1);
-    box-shadow: 0 0 35px 8px rgba(255, 255, 255, 0.15); /* deslocamento x, deslocamento y, blur do brilho, espalhamento do brilho */
+    box-shadow: 0 0 35px 8px rgba(255, 255, 255, 0.15);
     transition: 0.3s;
     cursor: default;
 }
